tests/NormalTests/paczka1/fuzzy1/16225319.err
Error in line 1: A955 A860 43,9
Error in line 10: 3HWYajLC A860 49,5
Error in line 20: 3HWYajLC A3 14,0
Error in line 24: tH1x A3 88,6
Error in line 21: HgYtqgFtc2U A860 74,8
Error in line 33: HgYtqg\tc2U A955 171,2
Error in line 34: lhh A860 49,5
Error in line 36: lhh S729 58,2
